[package]
name = "checked_int_cast"
version = "1.0.0"
authors = ["Peter Reid <peter.d.reid@gmail.com>"]
license = "MIT"
readme = "README.md"
description = """
Conversions between primitive integers with overflow and underflow checking
"""
repository = "https://github.com/PeterReid/checked_int_cast"
homepage = "https://github.com/PeterReid/checked_int_cast"
documentation = "https://PeterReid.github.io/checked_int_cast"
keywords = ["checked", "int", "integer", "cast", "convert", "conversion"]